# ChatFormula1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  files_with_errors.txt  fix.py  fix_graph.py  fix_mypy.py  fix_mypy2.py  fix_ruff.py  fix_test.py  fix_toml.py  fix_toml2.py  fix_toml3.py  fix_toml4.py  fix_toml5.py  fix_toml6.py  parse_ruff.py  patch_cache.py  patch_cache2.py  patch_conftest.py  patch_file.py  patch_pyproject.py  patch_tests.py  patch_toml.py  pyproject.toml  pytest.ini  readme.html  render.yaml  ruff_errors.txt  setup.py  test_cache.py  test_cache_perf.py  test_dialog.py  test_router.py  update_app.py  update_ui_app_replace.py  update_ui_components.py
.Jules/: palette.md
.github/: DEPLOY_GUIDE.md
.github/workflows/: agent.yml  ci-cd.yml  ci.yml  deploy.yml  gateway.yml  web.yml
.jules/: bolt.md  palette.md  sentinel.md
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/ingestion/: __init__.py  cli.py  data_loader.py  document_processor.py  metadata_enricher.py  pipeline.py
agent/src/chatf1_agent/: __init__.py  caching.py  exceptions.py  graph.py  guards.py  logging.py  prompts.py  providers.py  server.py  settings.py  state.py
agent/src/chatf1_agent/retrieval/: __init__.py  tavily.py  vector_store.py
agent/tests/: __init__.py  conftest.py  test_analysis_json_fallback.py  test_config.py  test_data_loader.py  test_document_processor.py  test_fallback.py  test_graph_integration.py  test_guards.py  test_prompts.py  test_providers.py  test_streaming_contract.py  test_tavily_client.py  test_vector_store_integration.py
data/: drivers.json  races.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEMO.md  DEPLOYMENT.md  GITHUB_ACTIONS.md  GRAPHQL.md  OBSERVABILITY.md  README.md  ROADMAP.md  SECRETS_MANAGEMENT.md  SECURITY.md  SETUP.md  STREAMING_PROTOCOL.md  TAVILY_INTEGRATION.md  TROUBLESHOOTING.md
docs/adr/: 000-single-node-invariants.md  001-two-services.md  002-model-agnostic-providers.md  003-ndjson-over-sse.md  004-supabase-over-neon.md  005-showcase-mode.md  006-handrolled-rate-limiter.md
gateway/: .dialyzer_ignore.exs  .gitignore  README.md  mix.exs
gateway/config/: config.exs  dev.exs  runtime.exs  test.exs
gateway/lib/: chat_f1.ex  chat_f1_web.ex
gateway/lib/chat_f1/: accounts.ex  application.ex  budget.ex  conv_pipeline_supervisor.ex  conversations.ex  formula1.ex  repo.ex  showcase.ex
gateway/lib/chat_f1/accounts/: api_key.ex  api_keys.ex
gateway/lib/chat_f1/agents/: breaker.ex  client.ex
gateway/lib/chat_f1/budget/: ledger_row.ex
gateway/lib/chat_f1/conversations/: conversation.ex  message.ex  message_feedback.ex  server.ex  stream_runner.ex
gateway/lib/chat_f1/formula1/: constructor.ex  driver.ex  race.ex  race_result.ex
gateway/lib/chat_f1/rate_limit/: plug.ex  server.ex
gateway/lib/chat_f1/showcase/: answer.ex  replayer.ex
gateway/lib/chat_f1/telemetry/: prom_ex.ex  stats_handler.ex
gateway/lib/chat_f1/workers/: ingest_news.ex  jolpica_sync.ex  prune_conversations.ex  spend_rollup.ex  title_gen.ex  warm_showcase_cache.ex
gateway/lib/chat_f1_web/: endpoint.ex  router.ex  schema.ex  telemetry.ex
gateway/lib/chat_f1_web/channels/: graphql_socket.ex
gateway/lib/chat_f1_web/controllers/: error_json.ex  health_controller.ex
gateway/lib/chat_f1_web/plugs/: api_key.ex  cors.ex  viewer_token.ex
gateway/lib/chat_f1_web/schema/: dataloader.ex
gateway/lib/mix/tasks/: chat_f1.gen_api_key.ex
gateway/priv/repo/: seeds.exs
gateway/priv/repo/migrations/: 20250101000001_create_constructors.exs  20250101000002_create_drivers.exs  20250101000003_create_races.exs  20250101000004_create_race_results.exs  20250101000005_create_conversations.exs  20250101000006_create_messages.exs  20260101000007_create_budget_ledger.exs  (+6 more)
gateway/test/: test_helper.exs
gateway/test/chat_f1/: conversations_test.exs  formula1_test.exs  rate_limit_test.exs
gateway/test/chat_f1_web/: graphql_http_test.exs  graphql_socket_test.exs  streaming_integration_test.exs
gateway/test/support/: conn_case.ex  data_case.ex
gateway/web/: schema.graphql
scripts/: setup_github_actions.sh
src/: __init__.py  exceptions.py
src/agent/: graph.py  memory.py  nodes.py  state.py
src/api/: README.md  main.py
src/api/routes/: __init__.py  admin.py  chat.py  health.py
src/config/: logging.py  settings.py
src/ingestion/: README.md  __init__.py  cli.py  data_loader.py  document_processor.py  metadata_enricher.py  pipeline.py
src/prompts/: README.md  __init__.py  rag_prompts.py  specialized_prompts.py  system_prompts.py
src/search/: tavily_client.py
src/security/: __init__.py  authentication.py  input_validation.py  middleware.py  rate_limiting.py  request_signing.py
src/tools/: README.md  __init__.py  f1_tools.py
src/ui/: QUICK_START.md  README.md  __init__.py  app.py  components.py
src/utils/: README.md  __init__.py  cache.py  dashboard.py  error_tracking.py  fallback.py  free_tier_limiter.py  metrics.py  retry.py  timing.py
src/vector_store/: manager.py
tests/: README.md  conftest.py  test_config.py  test_data_loader.py  test_document_processor.py  test_e2e_user_workflows.py  test_exceptions.py  test_fallback.py  test_functionality_preservation.py  test_integration_agent.py  test_integration_api.py  test_integration_complete.py  test_prompts.py  test_rate_limiting_ip_extraction.py  test_security.py  test_tavily_client.py  test_ui_components.py
tests/agent/: test_graph.py  test_memory.py  test_state.py
web/: DESIGN.md  README.md  codegen.ts  eslint.config.js  index.html  package-lock.json  package.json  schema.graphql  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  app.css  main.tsx  vite-env.d.ts
web/src/components/: icons.tsx
web/src/graphql/: generated.ts  operations.graphql  possible-types.ts
web/src/lib/: apollo.ts  env.ts  utils.ts  viewer-token.ts  wake.ts
web/src/routes/: about-page.tsx  calendar-page.tsx  chat-page.tsx  drivers-page.tsx  page-chrome.tsx  standings-page.tsx
web/src/test/: setup.ts
(+68 files in other folders)
