[tool.poetry]
name = "chatformula1"
version = "0.1.0"
description = "AI-powered Formula 1 expert chatbot with RAG architecture"
authors = ["Prateek Mulye <prateekmulye@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core Dependencies
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"

# LangChain & LangGraph - Latest Stable Versions from PyPI
langchain = "^1.1.0"
langgraph = "^1.0.4"

# LangChain Integrations - Latest Stable
langchain-openai = "^1.1.0"
langchain-pinecone = "^0.2.13"
langchain-tavily = "^0.2.13"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.0.0"

# Vector Store Dependencies - Latest with async support
pinecone = {extras = ["asyncio"], version = "^7.3.0"}

# Additional LangChain Tools - Compatible with LangChain 1.1.0+
langsmith = "^0.3.45"

# Logging - Latest
structlog = "^24.4.0"
python-json-logger = "^3.3.0"

# API Framework - Latest
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.34.3"}

# UI Framework - Latest
streamlit = "^1.51.0"

# Utilities - Latest
httpx = "^0.28.1"
tenacity = "^9.0.0"
aiofiles = "^24.1.0"
click = "^8.1.8"
isort = "^7.0.0"

[tool.poetry.group.dev.dependencies]
# Testing - Latest
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.3.0"
pytest-mock = "^3.15.1"

# Code Quality - Latest
black = "^25.11.0"
ruff = "^0.8.6"
mypy = "^1.19.0"
pre-commit = "^4.5.0"

# Type Stubs - Latest
types-aiofiles = "^24.1.0.20250822"
tomlkit = "^0.14.0"

[tool.poetry.scripts]
f1-api = "src.api.main:main"
f1-ui = "src.ui.app:main"
f1-ingest = "src.ingestion.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "ANN"]

[tool.ruff.lint.per-file-ignores]
"src/agent/graph.py" = ["ANN201", "ANN401", "F401", "F821", "UP007"]
"src/agent/memory.py" = ["F401", "UP007"]
"src/agent/nodes.py" = ["ANN401", "F841", "UP007", "UP035"]
"src/agent/state.py" = ["UP007", "UP035"]
"src/api/main.py" = ["ANN001", "ANN002", "ANN003", "ANN202", "F401", "UP006", "UP035", "UP041"]
"src/api/routes/admin.py" = ["ANN201", "ANN202", "B904", "UP007"]
"src/api/routes/chat.py" = ["ANN202", "B904", "UP007", "UP038"]
"src/api/routes/health.py" = ["F841"]
"src/config/logging.py" = ["ANN401", "UP007"]
"src/config/settings.py" = ["ANN001", "ANN206", "S104", "UP007", "UP011"]
"src/exceptions.py" = ["UP007"]
"src/ingestion/cli.py" = ["F401"]
"src/ingestion/data_loader.py" = ["ANN204", "UP006", "UP007", "UP015", "UP035"]
"src/ingestion/document_processor.py" = ["ANN204", "S324", "UP006", "UP007", "UP035"]
"src/ingestion/metadata_enricher.py" = ["ANN204", "UP006", "UP007", "UP035"]
"src/ingestion/pipeline.py" = ["ANN204", "F401", "UP006", "UP007", "UP035"]
"src/prompts/specialized_prompts.py" = ["F401", "UP006", "UP007", "UP035"]
"src/search/tavily_client.py" = ["B904", "F841", "UP007"]
"src/security/authentication.py" = ["ANN001", "ANN201", "ANN204", "B007", "F401", "UP007"]
"src/security/input_validation.py" = ["ANN204", "F401", "UP007"]
"src/security/middleware.py" = ["ANN001", "ANN201", "ANN202", "ANN204", "F401", "UP007"]
"src/security/rate_limiting.py" = ["ANN204", "F401", "UP007"]
"src/security/request_signing.py" = ["ANN201", "ANN204", "UP007"]
"src/tools/f1_tools.py" = ["UP006", "UP007", "UP035"]
"src/utils/dashboard.py" = ["ANN204", "F401", "UP006", "UP035"]
"src/utils/error_tracking.py" = ["UP007", "UP038"]
"src/utils/fallback.py" = ["ANN401", "UP007", "UP035"]
"src/utils/free_tier_limiter.py" = ["ANN202", "ANN204", "F841", "UP006", "UP007", "UP035"]
"src/utils/metrics.py" = ["ANN204", "ANN401", "C401", "F401", "UP006", "UP007", "UP035"]
"src/utils/retry.py" = ["ANN401", "F401", "UP006", "UP035"]
"src/utils/timing.py" = ["ANN204", "ANN401", "F401", "UP035"]
"src/vector_store/manager.py" = ["F401", "UP006", "UP007", "UP035"]
"tests/conftest.py" = ["ANN201", "ANN204", "ANN401", "E721", "F401", "UP006", "UP007", "UP035"]
"tests/test_config.py" = ["ANN201", "F401"]
"tests/test_data_loader.py" = ["ANN001", "ANN201", "F401", "S108"]
"tests/test_document_processor.py" = ["ANN201", "UP032"]
"tests/test_e2e_user_workflows.py" = ["ANN201", "S110"]
"tests/test_fallback.py" = ["ANN001", "ANN201", "ANN202", "F401"]
"tests/test_functionality_preservation.py" = ["ANN001", "ANN201", "F401", "F841", "W293"]
"tests/test_integration_agent.py" = ["ANN201", "UP038"]
"tests/test_integration_api.py" = ["ANN201", "ANN202", "F401"]
"tests/test_integration_complete.py" = ["ANN001", "ANN201", "F401"]
"tests/test_security.py" = ["ANN201", "S106"]
"tests/test_ui_components.py" = ["ANN001", "ANN201", "ANN202", "F401"]
"tests/test_exceptions.py" = ["ANN201"]
"tests/test_integration_tavily.py" = ["ANN201"]
"tests/test_integration_vector_store.py" = ["ANN201"]
"tests/test_prompts.py" = ["ANN201"]
"tests/test_tavily_client.py" = ["ANN201"]
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
