[tool.poetry]
name = "chatformula1"
version = "0.1.0"
description = "AI-powered Formula 1 expert chatbot with RAG architecture"
authors = ["Prateek Mulye <prateekmulye@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core Dependencies
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"

# LangChain & LangGraph - Latest Stable Versions from PyPI
langchain = "^1.1.0"
langgraph = "^1.0.4"

# LangChain Integrations - Latest Stable
langchain-openai = "^1.1.0"
langchain-pinecone = "^0.2.13"
langchain-tavily = "^0.2.13"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.0.0"

# Vector Store Dependencies - Latest with async support
pinecone = {extras = ["asyncio"], version = "^7.3.0"}

# Additional LangChain Tools - Compatible with LangChain 1.1.0+
langsmith = "^0.3.45"

# Logging - Latest
structlog = "^24.4.0"
python-json-logger = "^3.3.0"

# API Framework - Latest
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.34.3"}

# UI Framework - Latest
streamlit = "^1.51.0"

# Utilities - Latest
httpx = "^0.28.1"
tenacity = "^9.0.0"
aiofiles = "^24.1.0"
click = "^8.1.8"
isort = "^7.0.0"

[tool.poetry.group.dev.dependencies]
# Testing - Latest
pytest = "^8.4.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.3.0"
pytest-mock = "^3.15.1"

# Code Quality - Latest
black = "^25.11.0"
ruff = "^0.8.6"
mypy = "^1.19.0"
pre-commit = "^4.5.0"

# Type Stubs - Latest
types-aiofiles = "^24.1.0.20250822"

[tool.poetry.scripts]
f1-api = "src.api.main:main"
f1-ui = "src.ui.app:main"
f1-ingest = "src.ingestion.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "S101",   # use of assert
    "F401",   # unused imports (suppress globally for legacy code)
    "UP006",  # use list instead of List (suppress globally for legacy code)
    "UP007",  # use X | Y for type annotations (suppress globally for legacy code)
    "UP035",  # Import from collections.abc (suppress globally for legacy code)
    "UP038",  # Use X | Y in isinstance (suppress globally for legacy code)
    "S108",   # insecure usage of temporary file (suppress globally for legacy code)
    "UP032",  # use f-string instead of format (suppress globally for legacy code)
    "S110",   # try-except-pass (suppress globally for legacy code)
    "W293",   # blank line contains whitespace (suppress globally for legacy code)
    "F841",   # local variable assigned but never used (suppress globally for legacy code)
    "S106",   # possible hardcoded password (suppress globally for legacy code)
    "E721",   # use is/is not for type comparisons (suppress globally for legacy code)
    "ANN401", # dynamically typed expressions (typing.Any) are disallowed (suppress globally for legacy code)
    "ANN204", # missing return type annotation for special method (suppress globally for legacy code)
    "ANN202", # missing return type annotation for private function (suppress globally for legacy code)
    "C401",   # unnecessary generator (rewrite as a set comprehension) (suppress globally for legacy code)
    "ANN001", # missing type annotation for function argument (suppress globally for legacy code)
    "ANN206", # missing return type annotation for classmethod (suppress globally for legacy code)
    "S324",   # probable use of insecure hash functions (suppress globally for legacy code)
    "B904",   # within an except clause, raise exceptions with raise ... from err (suppress globally for legacy code)
    "B007",   # loop control variable not used within loop body (suppress globally for legacy code)
    "ANN201", # missing return type annotation for public function (suppress globally for legacy code)
    "W291",   # trailing whitespace (suppress globally for legacy code)
    "ANN002", # missing type annotation for *args (suppress globally for legacy code)
    "ANN003", # missing type annotation for **kwargs (suppress globally for legacy code)
    "S104",   # possible binding to all interfaces (suppress globally for legacy code)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "ANN"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langgraph.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
